# ChessAIAlphaBeta

./: CMakeLists.txt  chess.c  chess.h  chess_AI.c  chess_AI.h  chess_alpha_beta.c  chess_alpha_beta.h  chess_board.c  chess_board.h  chess_moves.c  chess_moves.h  chess_moves_save.c  chess_moves_save.h  chess_moves_saves.c  chess_moves_saves.h  chess_moves_saves_black.c  chess_moves_saves_black.h  chess_moves_saves_white.c  chess_moves_saves_white.h  main.c  min_max.c  min_max.h
